fix range slider alignment bug

--- a/src/components/layout/colorSideBar/rangeSlider/index.css
+++ b/src/components/layout/colorSideBar/rangeSlider/index.css
@@ -24,7 +24,6 @@
 
   .form_control_container {
     display: flex;
-    align-items: center;
   }
 
   .dollar {
